Completed all challenges

--- a/templates/horoscope_results.html
+++ b/templates/horoscope_results.html
@@ -5,10 +5,9 @@
     </head>
     <body>
         <!-- Your HTML code goes here! -->
-
-        
-
-        
-        
+        <h1>Hey {{username}}</h1>
+        <p>Your horoscope sign is {{horoscope_sign}}</p>
+        <p>Your personality is {{personality}}</p>
+        <p>Your lucky number is {{lucky_number}}</p>
     </body>
 </html>
