--- a/templates/calculator_results.html
+++ b/templates/calculator_results.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <!-- Your HTML code goes here! -->
-
+        You chose to {{user_select_operation}} {{user_operand1}} and {{user_operand2}}. Your result is: {{result}}
 
 
 
