--- a/templates/froyo_form.html
+++ b/templates/froyo_form.html
@@ -5,11 +5,11 @@
     </head>
     <body>
         <!-- Your HTML code goes here! -->
-
-
-
-
-
-        
+        <form action="/froyo_results" method="GET">
+            What is your favorite Fro-Yo flavor? <br/>
+            <input type="text" name="flavor"><br/>
+            <input type="text" name="toppings"><br/>
+            <input type="submit" value="Submit!">
+        </form>   
     </body>
 </html>
