--- a/templates/froyo_results.html
+++ b/templates/froyo_results.html
@@ -5,11 +5,6 @@
     </head>
     <body>
         <!-- Your HTML code goes here! -->
-
-
-
-
-
-        
+        <h2>You ordered {{flavor}} flavored Fro-Yo with toppings {{toppings}}!</h2>   
     </body>
 </html>
